h2. 2.0.17, released 12/07/2012

* Add accessor for the expires_at time when renewing access tokens

h2. 2.0.15, released 15/06/2012

* Add support for manual journals

h2. 2.0.14, released 07/05/2012

* Add support for bank transactions

h2. 2.0.13, released 14/09/2011

* Add new Organisation attributes
* Partner app implementation
* Add Invoice#sent_to_contact

h2. 2.0.12, released 25/05/2011

* Add OUTPUT2 and EC Zero-rated income as valid tax types
* Add support for updating invoices
* Add support for oauth_callback

h2. 2.0.11, released 18/04/2011

* Bug fixes

h2. 2.0.10, released 12/04/2011

* Fix issue with TrackingCategory#to_xml

h2. 2.0.9, released 12/04/2011

* Improve handling of ApiExceptions

h2. 2.0.8, released 14/02/2011

* Add support for new undocumented organisation attributes

h2. 2.0.7, released 09/12/2010

* Bug fixes

h2. 2.0.6, released 14/11/2010

* Bug fixes

h2. 2.0.5, released 21/10/2010

* Add support for credit notes.  Thanks to malclocke and wasabhi for their contributions

h2. 2.0.4, released 29/09/2010

* Use bundler for dependency management

h2. 2.0.3, released 29/09/2010

* Fix issue caused by Xero updating the Tracking Category XML structure

h2. 2.0.2, released 23/08/2010

* Xero Api version 2.0

h2. 1.0.5, released 25/09/2009

* This will be the final release before switching to the Xero API version 2.0
* Allow multiple tracking options per line item

h2. 1.0.4, released 13/08/2009

* Auto-assign Contact#contact_id and Invoice#invoice_id on creation of either of these records.
* Add Xero::Gateway#build_contact and Xero::Gateway#build_invoice factory methods to create Contact/Invoice objects associated with the gateway.
* Add Contact#save method to create/update a contact record based on if it has a contact_id or contact_number.
* Add Invoice#save method to create (insert only currently supported by Xero API) the invoice.