@@ -7,7 +7,7 @@ module XeroGateway
     attr_reader :errors
 
     # All accessible fields
-    attr_accessor :date, :amount
+    attr_accessor :payment_id, :date, :amount, :reference, :currency_rate
         
     def initialize(params = {})
       @errors ||= []
@@ -21,15 +21,18 @@ module XeroGateway
       payment = Payment.new
       payment_element.children.each do | element |
         case element.name
-          when 'Date' then    payment.date = parse_date_time(element.text)
-          when 'Amount' then  payment.amount = BigDecimal.new(element.text)
+          when 'PaymentID'    then payment.payment_id = element.text
+          when 'Date'         then payment.date = parse_date_time(element.text)
+          when 'Amount'       then payment.amount = BigDecimal.new(element.text)
+          when 'Reference'    then payment.reference = element.text
+          when 'CurrencyRate' then payment.currency_rate = BigDecimal.new(element.text)
         end    
       end
       payment
     end 
     
     def ==(other)
-      [:date, :amount].each do |field|
+      [:payment_id, :date, :amount].each do |field|
         return false if send(field) != other.send(field)
       end
       return true
